@@ -1,3 +1,8 @@
+2008-02-29  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.DesignerSupport.Toolbox/ToolboxWidget.cs: Ctrl+F1 work now in
+	  the toolbox.
+
 2008-02-28  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs,
